Improvements to wording and definitions

--- a/subprojects/docs/src/docs/userguide/workingWithDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/workingWithDependencies.adoc
@@ -21,7 +21,7 @@ The main entry point for this functionality is the api:org.gradle.api.artifacts.
 
 === Iterating over dependencies assigned to a configuration
 
-Sometimes you'll want to implement logic based on the declared dependencies of a project e.g. to inspect the declared dependencies in build script from a Gradle plugin. You can iterate over set of dependencies assigned to a configuration with the help of the method api:org.gradle.api.artifacts.Configuration#getDependencies()[]. Alternatively, you can also use api:org.gradle.api.artifacts.Configuration#getAllDependencies()[] to include the declared dependencies of <<sub:inheriting_dependencies_from_other_configurations,superconfigurations>>. The returned dependencies do not resolve the configuration and therefore do not include transitive dependencies.
+Sometimes you'll want to implement logic based on the dependencies declared in the build script of a project e.g. to inspect them in a Gradle plugin. You can iterate over the set of dependencies assigned to a configuration with the help of the method api:org.gradle.api.artifacts.Configuration#getDependencies()[]. Alternatively, you can also use api:org.gradle.api.artifacts.Configuration#getAllDependencies()[] to include the dependencies declared in <<sub:inheriting_dependencies_from_other_configurations,superconfigurations>>. These APIs only return the declared dependencies and do not trigger <<sec:dependency_resolution,dependency resolution>>. Therefore, the dependency sets do not include transitive dependencies. Calling the APIs during the <<sec:build_phases,configuration phase of the build lifecycle>> does not result in a significant performance impact.
 
 ++++
 <sample id="iterating-dependencies" dir="userguide/dependencyManagement/workingWithDependencies/iterateDependencies" title="Iterating over the dependencies assigned to a configuration">
