--- a/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/declaringDependencies.adoc
@@ -167,7 +167,7 @@ Many Gradle plugins add pre-defined configurations to your project. The Java plu
 </figure>
 +++++
 
-For more examples on the usage of configurations to navigate, inspect and post-processing metadata and artifacts of assigned dependencies, see <<working_with_dependencies>>.
+For more examples on the usage of configurations to navigate, inspect and post-process metadata and artifacts of assigned dependencies, see <<working_with_dependencies>>.
 
 ==== Defining custom configurations
 
@@ -188,7 +188,7 @@ A project's configurations are managed by a `configurations` object. Configurati
 
 A configuration can extend other configurations to form an inheritance hierarchy. In practice, this concept is similar to class inheritance in object-oriented programming. Child configurations inherit the whole set of dependencies declared for any of its superconfigurations.
 
-Configuration inheritance is heavily used by Gradle core plugins like the <<sec:java_plugin_and_dependency_management,Java plugin>>. For example the `testCompile` configuration extends the `compile` configuration. The configuration hierarchy has a practical purpose: compiling tests requires the dependencies of the source code under test on top of the dependencies needed write the test class. A Java project that uses JUnit to write and execute test code also needs Guava if its classes are imported in the production source code.
+Configuration inheritance is heavily used by Gradle core plugins like the <<sec:java_plugin_and_dependency_management,Java plugin>>. For example the `testImplementation` configuration extends the `implementation` configuration. The configuration hierarchy has a practical purpose: compiling tests requires the dependencies of the source code under test on top of the dependencies needed write the test class. A Java project that uses JUnit to write and execute test code also needs Guava if its classes are imported in the production source code.
 
 +++++
 <figure xmlns:xi="http://www.w3.org/2001/XInclude">
@@ -199,9 +199,9 @@ Configuration inheritance is heavily used by Gradle core plugins like the <<sec:
 </figure>
 +++++
 
-Under the covers the `testCompile` and `compile` configurations form an inheritance hierarchy by calling the method api:org.gradle.api.artifacts.Configuration#extendsFrom(org.gradle.api.artifacts.Configuration...)[]. A configuration can extend any other configuration irrespective of its definition in the build script or a plugin.
+Under the covers the `testImplementation` and `implementation` configurations form an inheritance hierarchy by calling the method api:org.gradle.api.artifacts.Configuration#extendsFrom(org.gradle.api.artifacts.Configuration...)[]. A configuration can extend any other configuration irrespective of its definition in the build script or a plugin.
 
-Let's say you wanted to write a suite of smoke tests. Each smoke test makes a HTTP call to verify an web service endpoint. As the underlying test framework the project already uses JUnit. You can define a new configuration named `smokeTest` that extends from the `testCompile` configuration to reuse the existing test framework dependency.
+Let's say you wanted to write a suite of smoke tests. Each smoke test makes a HTTP call to verify an web service endpoint. As the underlying test framework the project already uses JUnit. You can define a new configuration named `smokeTest` that extends from the `testImplementation` configuration to reuse the existing test framework dependency.
 
 ++++
 <sample id="configuration-inheritance" dir="userguide/dependencyManagement/declaringDependencies/configurationInheritance" title="Extending a configuration from another configuration">
