Extract content on configurations into separate chapter

--- a/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
+++ b/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
@@ -39,7 +39,7 @@ Gradle has built-in support for dependency management and lives up the task of f
 
 The example project builds Java source code. Some of the Java source files import classes from link:https://github.com/google/guava[Google Guava], a open-source library providing a wealth of utility functionality. In addition to Guava, the project needs the link:http://junit.org/junit5/[JUnit] libraries for compiling and executing test code.
 
-Guava and JUnit represent the _dependencies_ of this project. A build script developer can <<declaring_dependencies,declare dependencies>> for different scopes e.g. just for compilation of source code or for executing tests. In Gradle, the <<sub:scope_of_dependency_configurations,scope of a dependency>> is called a _configuration_. For a full overview, see the reference material on <<dependency_types,dependency types>>.
+Guava and JUnit represent the _dependencies_ of this project. A build script developer can <<declaring_dependencies,declare dependencies>> for different scopes e.g. just for compilation of source code or for executing tests. In Gradle, the <<defining_and_using_configurations,scope of a dependency>> is called a _configuration_. For a full overview, see the reference material on <<dependency_types,dependency types>>.
 
 Often times dependencies come in the form of <<sub:terminology_module,modules>>. You’ll need to tell Gradle where to find those modules so they can be consumed by the build. The location for storing modules is called a _repository_. By <<declaring_repositories,declaring repositories>> for a build, Gradle will know how to find and retrieve modules. Repositories can come in different forms: as local directory or a remote repository. The reference on <<repository_types,repository types>> provides a broad coverage on this topic.
 
