--- a/subprojects/docs/src/docs/userguide/javaLibraryPlugin.adoc
+++ b/subprojects/docs/src/docs/userguide/javaLibraryPlugin.adoc
@@ -35,7 +35,7 @@ To use the Java Library plugin, include the following in your build script:
 
 The key difference between the standard Java plugin and the Java Library plugin is that the latter introduces the concept of an _API_ exposed to consumers. A library is a Java component meant to be consumed by other components. It's a very common use case in multi-project builds, but also as soon as you have external dependencies.
 
-The plugin exposes two <<sub:scope_of_dependency_configurations,configurations>> that can be used to declare dependencies: `api` and `implementation`. The `api` configuration should be used to declare dependencies which are exported by the library API, whereas the `implementation` configuration should be used to declare dependencies which are internal to the component.
+The plugin exposes two <<defining_and_using_configurations,configurations>> that can be used to declare dependencies: `api` and `implementation`. The `api` configuration should be used to declare dependencies which are exported by the library API, whereas the `implementation` configuration should be used to declare dependencies which are internal to the component.
 
 ++++
 <sample id="useJavaLibraryPlugin" dir="java-library/quickstart" title="Declaring API and implementation dependencies">
