--- a/subprojects/docs/src/docs/userguide/workingWithDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/workingWithDependencies.adoc
@@ -17,7 +17,7 @@
 
 Gradle provides an extensive API for navigating, inspecting and post-processing metadata and artifacts of resolved dependencies.
 
-The main entry point for this functionality is the api:org.gradle.api.artifacts.Configuration[] API. To learn more about the fundamentals of configurations, see <<sub:scope_of_dependency_configurations>>.
+The main entry point for this functionality is the api:org.gradle.api.artifacts.Configuration[] API. To learn more about the fundamentals of configurations, see <<defining_and_using_configurations>>.
 
 === Iterating over dependencies assigned to a configuration
 
